got first endpoint semi-working
