# backend/api/openapi.yaml
@@ -29,9 +29,92 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /mail:
+    get:
+      parameters:
+        - in: query
+          name: mailbox
+          schema:
+            type: string
+          description: Which mailbox to return
+      description: Returns all Email
+      responses:
+        200:
+          description: Email Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EmailsResponse'
+        404:
+          description: Mailbox cannot be found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
+    EmailsResponse:
+      type: array
+      items:
+        $ref: '#/components/schemas/Inbox'
+    Inbox:
+      type: object
+      properties:
+        name:
+          type: string
+        mail:
+          type: array
+          items:
+            $ref: '#/components/schemas/Email'
+
+    Email:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        from:
+          type: object
+          properties:
+            name:
+              type: string
+            email:
+              type: string
+              format: email
+        to:
+          type: object
+          properties:
+            name:
+              type: string
+            email:
+              type: string
+              format: email
+        subject:
+          type: string
+        sent:
+          type: string
+          format: date-time
+        received:
+          type: string
+          format: date-time
+        content:
+          type: string
+        starred:
+          type: boolean
+      required:
+        - id
+        - from
+        - to
+        - subject
+        - sent
+        - received
     Error:
       required:
         - code
